fix: sonar check